--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @font-face {
-  font-family: "Proximanova";
-  src: url("./assets/fonts/proximanova.ttf") format("truetype");
+  font-family: "DarkLarch";
+  src: url("./assets/fonts/dark_larch.ttf") format("truetype");
 }
 
 @layer base {
@@ -20,8 +22,8 @@
 
 /* Hide scrollbar for Internet Explorer, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* Add this CSS to your project */
@@ -39,4 +41,3 @@
     fill: #ffffff;
   }
 }
-
