--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -11,13 +11,11 @@
 
 @layer base {
   .font-roboto-outline {
-    font-family: 'Roboto', sans-serif !important;
-    -webkit-text-stroke: 1px white;
-    text-stroke: 1px white; /* For other browsers */
+    font-family: "Roboto", sans-serif !important;
+    -webkit-text-stroke: 1.5px white;
+    text-stroke: 1.5px white; /* For other browsers */
   }
 }
-
-
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .scrollbar-hide::-webkit-scrollbar {
